TODO: Update the list

--- a/TODO
+++ b/TODO
@@ -1,40 +1,3 @@
-1. The big namespace shuffle (make butterfli a little more modular)
-  A. Move configuration and specs from butterfli-rails to butterfli
-
-  B. Create butterfli-instagram gem
-    - Move in Instagram data model and specs (from butterfli)
-    - Move in Instagram configuration model and specs (from butterfli-rails)
-
-  C. Create butterfli-instagram-rails gem
-    - Move in Instagram controllers and specs (from butterfli-rails)
-
-  #####
-  Butterfli Core
-
-  butterfli (Data framework)
-  Butterfli::Story
-  Butterfli::Configuration
-  Butterfli::Configuration::Providers
-
-  butterfli-dev (Development tools)
-  Butterfli::Test::Recorder
-
-  butterfli-rails (API framework for Rails)
-  Butterfli::Rails::Engine
-  Butterfli::Rails::Controller
-
-  Butterfli Extension
-
-  butterfli-instagram (Instagram data and configuration)
-  Butterfli::Instagram (GENERIC) (MODULE)
-  Butterfli::Instagram::Data (GENERIC) (DATA) (MODULE)
-  Butterfli::Instagram::Data::MediaObject (GENERIC) (DATA) (CLASS)
-  Butterfli::Instagram::Configuration::Provider (GENERIC) (API) (CLASS)
-
-  butterfli-instagram-rails
-  Butterfli::Instagram::Rails::Engine
-  Butterfli::Instagram::Rails::ApiController
-  Butterfli::Instagram::Rails::Subscription::GeographyController
-2. Write subscription mechanism to push events
-3. Rake task tests?
-4. Readme update
+1. Butterfli dev tools gem?
+  - For the response recorder & playback
+  - For other testing mechanisms?
